@@ -25,6 +25,9 @@ multi-signature generation
 11. getqueue.c: include stdint.h for uint32_t definition
 12. qmail-smtpd.c, qmail-qread.c, nowutc.c: fixed format string for subprintf
 13. hasstdarg.h: fixed HAVE_STDARG_H define
+14. qmail.h: added perm_error, temp_error macro to evaluate perm/temp errors
+15. qmail.c: use perm_error/temp_error from qmail.h to evaluate perm/temp
+    error
 
 * Mon Jan 30 2023 13:14:56 +0000 Manvendra Bhangui <indimail-mta@indimail.org> 3.0.2-1.1%{?dist}
 Release 3.0.2-1.1 Start 08/09/2022 End 30/11/2023
